--- a/app/src/main/res/layout/sign_up_screen.xml
+++ b/app/src/main/res/layout/sign_up_screen.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/signUpScreen_whiteBackground"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="411dp"
+        android:layout_height="700dp"
         android:layout_marginTop="144dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -113,8 +113,8 @@
 
     <TextView
         android:id="@+id/signUpScreen_accountText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="22dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/inder"
